[gd_scene load_steps=2 format=3 uid="uid://4u3l51vm7hgb"]

[ext_resource type="Script" uid="uid://d37t2i5k8i7dl" path="res://settings.gd" id="1_bvb5x"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bvb5x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LanguageOptionButton" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicCheckBox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
